syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package =  "github.com/daniel/master-golang/pb";

message loginUserRequest {
    string name = 1;
    string password = 2;
}

message loginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    google.protobuf.Timestamp access_token_at = 4;
    string refresh_token = 5;
    google.protobuf.Timestamp refresh_token_at = 6;
}